# Botcraft

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  launcher_json_connection.md
Examples/: CMakeLists.txt
Examples/0_HelloWorld/: CMakeLists.txt
Examples/0_HelloWorld/src/: main.cpp
Examples/1_UserControlledExample/: CMakeLists.txt
Examples/1_UserControlledExample/include/: UserControlledClient.hpp
Examples/1_UserControlledExample/src/: UserControlledClient.cpp  main.cpp
Examples/2_ChatCommandExample/: CMakeLists.txt
Examples/2_ChatCommandExample/include/: ChatCommandClient.hpp
Examples/2_ChatCommandExample/src/: ChatCommandClient.cpp  main.cpp
Examples/3_SimpleAFKExample/: CMakeLists.txt
Examples/3_SimpleAFKExample/src/: main.cpp
Examples/4_MapCreatorExample/: CMakeLists.txt
Examples/4_MapCreatorExample/include/: CustomBehaviourTree.hpp  MapCreationTasks.hpp  MapCreatorBot.hpp
Examples/4_MapCreatorExample/src/: MapCreationTasks.cpp  MapCreatorBot.cpp  main.cpp
Examples/5_MobHitterExample/: CMakeLists.txt
Examples/5_MobHitterExample/include/: MobHitterTasks.hpp
Examples/5_MobHitterExample/src/: MobHitterTasks.cpp  main.cpp
Examples/6_DispenserFarmExample/: CMakeLists.txt
Examples/6_DispenserFarmExample/include/: DispenserFarmTasks.hpp
Examples/6_DispenserFarmExample/src/: DispenserFarmTasks.cpp  main.cpp
Examples/7_WorldEaterExample/: CMakeLists.txt
Examples/7_WorldEaterExample/include/: WorldEaterClient.hpp  WorldEaterSubTrees.hpp  WorldEaterTasks.hpp  WorldEaterUtilities.hpp
Examples/7_WorldEaterExample/src/: WorldEaterClient.cpp  WorldEaterSubTrees.cpp  WorldEaterTasks.cpp  WorldEaterUtilities.cpp  main.cpp
Examples/8_Yggdrasil/: CMakeLists.txt
Examples/8_Yggdrasil/src/: main.cpp
botcraft/: CMakeLists.txt
botcraft/cmake/: Version.hpp.in  botcraft-config.cmake.in  download_mc_assets.bat.in  download_mc_assets.sh.in
botcraft/include/botcraft/AI/: AsyncTask.hpp  BaseBehaviourClient.hpp  BaseNode.hpp  BehaviourClient.hpp  BehaviourTree.hpp  Blackboard.hpp  BotBehaviour.hpp  InterfaceClient.hpp  PathfindingTask.hpp  SimpleBehaviourClient.hpp  Status.hpp  TemplatedBehaviourClient.hpp
botcraft/include/botcraft/Game/: AABB.hpp  AssetsManager.hpp  BaseClient.hpp  Biome.hpp  Block.hpp  Blockstate.hpp  Chunk.hpp  ConnectionClient.hpp  Enums.hpp  InterfaceClient.hpp  ManagersClient.hpp  Model.hpp  OtherPlayer.hpp  Player.hpp  PlayerInformation.hpp  Section.hpp  Vector3.hpp
botcraft/include/botcraft/NBT/: NBT.hpp  Tag.hpp  TagByte.hpp  TagByteArray.hpp  TagCompound.hpp  TagDouble.hpp  TagEnd.hpp  TagFloat.hpp  TagInt.hpp  TagIntArray.hpp  TagList.hpp  TagLong.hpp  TagLongArray.hpp  TagShort.hpp  TagString.hpp
botcraft/include/botcraft/Network/: BinaryReadWrite.hpp  LastSeenMessagesTracker.hpp  NetworkManager.hpp
botcraft/include/botcraft/Protocol/: AllMessages.hpp  BaseMessage.hpp  Handler.hpp  Message.hpp  MessageFactory.hpp  NetworkType.hpp  Type.hpp
botcraft/include/botcraft/Renderer/: CubeWorldRenderer.hpp  Enums.hpp  Face.hpp  RenderingManager.hpp  Settings.hpp  Transformation.hpp
botcraft/include/botcraft/Utilities/: AsyncHandler.hpp  DemanglingUtilities.hpp  EnumUtilities.hpp  ItemUtilities.hpp  Logger.hpp  (+6 more)
botcraft/src/AI/: AsyncTask.cpp  BaseNode.cpp  BehaviourClient.cpp  Blackboard.cpp  InterfaceClient.cpp  PathfindingTask.cpp  SimpleBehaviourClient.cpp
botcraft/src/Game/: AABB.cpp  AssetsManager.cpp  BaseClient.cpp  Biome.cpp  Block.cpp  Blockstate.cpp  Chunk.cpp  ConnectionClient.cpp  Enums.cpp  InterfaceClient.cpp  ManagersClient.cpp  Model.cpp  OtherPlayer.cpp  Player.cpp  PlayerInformation.cpp  World.cpp
botcraft/src/NBT/: NBT.cpp  Tag.cpp  TagByte.cpp  TagByteArray.cpp  TagCompound.cpp  TagDouble.cpp  TagEnd.cpp  TagFloat.cpp  TagInt.cpp  TagIntArray.cpp  TagList.cpp  TagLong.cpp  TagLongArray.cpp  TagShort.cpp  TagString.cpp
botcraft/src/Network/: AESEncrypter.cpp  Authentifier.cpp  BinaryReadWrite.cpp  Compression.cpp  LastSeenMessagesTracker.cpp  NetworkManager.cpp  TCP_Com.cpp  Yggdrasil_Authentifier.cpp
botcraft/src/Renderer/: Atlas.cpp  BehaviourRenderer.cpp  BlockRenderable.cpp  Camera.cpp  Chunk.cpp  CubeWorldRenderer.cpp  Entity.cpp  Face.cpp  ImageSaver.cpp  RenderingManager.cpp  Settings.cpp  Shader.cpp  Transformation.cpp  TransparentChunk.cpp  WorldRenderer.cpp
botcraft/src/Utilities/: AsyncHandler.cpp  DemanglingUtilities.cpp  ItemUtilities.cpp  Logger.cpp  NBTUtilities.cpp  SleepUtilities.cpp  StdAnyUtilities.cpp  StringUtilities.cpp
protocolCraft/: CMakeLists.txt
protocolCraft/cmake/: protocolCraft-config.cmake.in
protocolCraft/include/protocolCraft/: AllClientboundMessages.hpp  AllClientboundPackets.hpp  AllMessages.hpp  AllPackets.hpp  AllServerboundMessages.hpp  AllServerboundPackets.hpp  BaseMessage.hpp  BasePacket.hpp  BinaryReadWrite.hpp  GenericHandler.hpp  Handler.hpp  Message.hpp  MessageFactory.hpp  NetworkType.hpp  Packet.hpp  PacketFactory.hpp  enums.hpp
protocolCraft/private_include/protocolCraft/: BaseMessage.ipp
protocolCraft/src/: BaseMessage.cpp  BaseMessageClientbound.cpp  BaseMessageServerbound.cpp  BasePacket.cpp  BinaryReadWrite.cpp  MessageFactory.cpp  MessageFactoryClientbound.cpp  MessageFactoryServerbound.cpp  NetworkType.cpp  PacketFactory.cpp
protocolCraft/src/Types/: Chat.cpp
protocolCraft/src/Utilities/: GZip.cpp  Json.cpp  PluginLoader.cpp
tests/botcraft/: CMakeLists.txt
tests/botcraft/src/: aabb.cpp  behaviour_tree.cpp  blackboard.cpp  blockstate.cpp  init.cpp  items.cpp  pathfinding.cpp  world.cpp
tests/botcraft_online/: CMakeLists.txt
tests/botcraft_online/include/: MinecraftServer.hpp  TestManager.hpp  Utils.hpp
tests/botcraft_online/physics_trajectories/: ClientPatcher.java  generate_vanilla_trajectories.py
tests/botcraft_online/src/: MinecraftServer.cpp  TestManager.cpp  Utils.cpp  main.cpp
tests/protocolCraft/: CMakeLists.txt
tests/protocolCraft/src/: constexpr_string_processing.cpp  hashed_slot.cpp  json.cpp  nbt.cpp  serialization.cpp  templates.cpp  types.cpp
(+2420 files in other folders)
